--- a/src/main/resources/fxml/Advanced.fxml
+++ b/src/main/resources/fxml/Advanced.fxml
@@ -1,110 +1,120 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="650.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<TabPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+         prefHeight="350.0" prefWidth="650.0" tabClosingPolicy="UNAVAILABLE"
+         xmlns="http://javafx.com/javafx/8.0.121">
     <Tab text="WiFi Settings">
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
             <children>
-                <Label layoutX="119.0" layoutY="91.0" text="WiFi Name (SSID):" AnchorPane.leftAnchor="119.0" AnchorPane.rightAnchor="435.0" AnchorPane.topAnchor="91.0" />
-                <Label layoutX="136.0" layoutY="155.0" text="WiFi Password:" AnchorPane.leftAnchor="136.0" AnchorPane.rightAnchor="435.0" AnchorPane.topAnchor="155.0" />
-                <TextField fx:id="wifiSsidTextBox" layoutX="236.0" layoutY="87.0" prefHeight="25.0" prefWidth="282.0" AnchorPane.leftAnchor="236.0" AnchorPane.rightAnchor="132.0" AnchorPane.topAnchor="87.0" />
-                <PasswordField fx:id="wifiPasswdTextBox" layoutX="236.0" layoutY="151.0" prefHeight="25.0" prefWidth="282.0" AnchorPane.leftAnchor="236.0" AnchorPane.rightAnchor="132.0" AnchorPane.topAnchor="151.0" />
-                <Button layoutX="201.0" layoutY="219.0" mnemonicParsing="false" onAction="#handleWifiSave" prefHeight="54.0" prefWidth="249.0" text="Save" AnchorPane.leftAnchor="201.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="219.0" />
+                <Label layoutX="119.0" layoutY="91.0" text="WiFi Name (SSID):" AnchorPane.leftAnchor="119.0"
+                       AnchorPane.rightAnchor="435.0" AnchorPane.topAnchor="91.0"/>
+                <Label layoutX="136.0" layoutY="155.0" text="WiFi Password:" AnchorPane.leftAnchor="136.0"
+                       AnchorPane.rightAnchor="435.0" AnchorPane.topAnchor="155.0"/>
+                <TextField fx:id="wifiSsidTextBox" layoutX="236.0" layoutY="87.0" prefHeight="25.0" prefWidth="282.0"
+                           AnchorPane.leftAnchor="236.0" AnchorPane.rightAnchor="132.0" AnchorPane.topAnchor="87.0"/>
+                <PasswordField fx:id="wifiPasswdTextBox" layoutX="236.0" layoutY="151.0" prefHeight="25.0"
+                               prefWidth="282.0" AnchorPane.leftAnchor="236.0" AnchorPane.rightAnchor="132.0"
+                               AnchorPane.topAnchor="151.0"/>
+                <Button layoutX="201.0" layoutY="219.0" mnemonicParsing="false" onAction="#handleWifiSave"
+                        prefHeight="54.0" prefWidth="249.0" text="Save" AnchorPane.leftAnchor="201.0"
+                        AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="219.0" disable="${wifiSsidTextBox.text.empty}"/>
             </children>
         </AnchorPane>
     </Tab>
     <Tab text="Firmware upgrade">
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
             <children>
-                <TextField fx:id="firmwarePathTextBox" layoutX="69.0" layoutY="94.0" prefHeight="25.0" prefWidth="356.0" AnchorPane.bottomAnchor="202.0" AnchorPane.leftAnchor="69.0" AnchorPane.rightAnchor="225.0" AnchorPane.topAnchor="94.0" />
-                <Button layoutX="425.0" layoutY="94.0" mnemonicParsing="false" onAction="#handleFirmwareSelection" prefHeight="25.0" prefWidth="163.0" text="Select a firmware package" AnchorPane.bottomAnchor="202.0" AnchorPane.leftAnchor="425.0" AnchorPane.rightAnchor="62.0" AnchorPane.topAnchor="94.0" />
-                <Button layoutX="192.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleFirmwareUpgrade" prefHeight="60.0" prefWidth="267.0" text="Run firmware upgrade" AnchorPane.bottomAnchor="100.0" AnchorPane.rightAnchor="191.0" AnchorPane.topAnchor="161.0" />
+                <TextField fx:id="firmwarePathTextBox" layoutX="69.0" layoutY="94.0" prefHeight="25.0" prefWidth="356.0"
+                           AnchorPane.bottomAnchor="202.0" AnchorPane.leftAnchor="69.0" AnchorPane.rightAnchor="225.0"
+                           AnchorPane.topAnchor="94.0"/>
+                <Button layoutX="425.0" layoutY="94.0" mnemonicParsing="false" onAction="#handleFirmwareSelection"
+                        prefHeight="25.0" prefWidth="163.0" text="Select a firmware package"
+                        AnchorPane.bottomAnchor="202.0" AnchorPane.leftAnchor="425.0" AnchorPane.rightAnchor="62.0"
+                        AnchorPane.topAnchor="94.0"/>
+                <Button layoutX="192.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleFirmwareUpgrade"
+                        prefHeight="60.0" prefWidth="267.0" text="Run firmware upgrade" AnchorPane.bottomAnchor="100.0"
+                        AnchorPane.rightAnchor="191.0" AnchorPane.topAnchor="161.0" disable="${firmwarePathTextBox.text.empty}"/>
             </children>
         </AnchorPane>
     </Tab>
     <Tab text="About your device">
         <GridPane prefHeight="249.0" prefWidth="467.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="245.0" minWidth="10.0" prefWidth="158.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="352.0" minWidth="10.0" prefWidth="342.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="245.0" minWidth="10.0" prefWidth="158.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="352.0" minWidth="10.0" prefWidth="342.0"/>
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
             </rowConstraints>
             <Label text="Initialized device: " GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                 <GridPane.margin>
-                    <Insets right="5.0" />
+                    <Insets right="5.0"/>
                 </GridPane.margin>
             </Label>
             <Label text="Espressif SDK version:" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                 <GridPane.margin>
-                    <Insets right="5.0" />
+                    <Insets right="5.0"/>
                 </GridPane.margin>
             </Label>
             <Label text="Enlight Firmware version:" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
                 <GridPane.margin>
-                    <Insets right="5.0" />
+                    <Insets right="5.0"/>
                 </GridPane.margin>
             </Label>
             <Label text="Free RAM (bytes):" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
                 <GridPane.margin>
-                    <Insets right="5.0" />
+                    <Insets right="5.0"/>
                 </GridPane.margin>
             </Label>
             <Label text="Serial number:" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
                 <GridPane.margin>
-                    <Insets right="5.0" />
+                    <Insets right="5.0"/>
                 </GridPane.margin>
             </Label>
             <Label text="Current WiFi:" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
                 <GridPane.margin>
-                    <Insets right="5.0" />
+                    <Insets right="5.0"/>
                 </GridPane.margin>
             </Label>
             <Label text="Current IP address:" GridPane.halignment="RIGHT" GridPane.rowIndex="7">
                 <padding>
-                    <Insets right="5.0" />
+                    <Insets right="5.0"/>
                 </padding>
             </Label>
             <Label text="WiFi signal strength:" GridPane.halignment="RIGHT" GridPane.rowIndex="8">
                 <GridPane.margin>
-                    <Insets right="5.0" />
+                    <Insets right="5.0"/>
                 </GridPane.margin>
             </Label>
-            <Label fx:id="initedDevice" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label fx:id="sdkVersion" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label fx:id="firmwareVersion" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Label fx:id="freeRam" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Label fx:id="serialNumber" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <Label fx:id="currentWifiSsid" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <Label fx:id="currentIpAddr" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <Label fx:id="wifiSigStrength" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <Label fx:id="initedDevice" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+            <Label fx:id="sdkVersion" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+            <Label fx:id="firmwareVersion" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+            <Label fx:id="freeRam" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+            <Label fx:id="serialNumber" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+            <Label fx:id="currentWifiSsid" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+            <Label fx:id="currentIpAddr" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
+            <Label fx:id="wifiSigStrength" text="Unknown" GridPane.columnIndex="1" GridPane.rowIndex="8"/>
         </GridPane>
 
     </Tab>
     <Tab text="About this project">
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-            <Label alignment="CENTER" ellipsisString="" layoutX="14.0" layoutY="14.0" prefHeight="296.0" prefWidth="620.0" text="By Jackson Ming Hu @ 2018&#10;This app is licenced under CC-BY-NC-SA 4.0, not for commercial purposes.&#10;&#10;This app is a part of Project Enlight.&#10;Github: huming2207/Enlighter&#10;" wrapText="true" />
+            <Label alignment="CENTER" ellipsisString="" layoutX="14.0" layoutY="14.0" prefHeight="296.0"
+                   prefWidth="620.0"
+                   text="By Jackson Ming Hu @ 2018&#10;This app is licenced under CC-BY-NC-SA 4.0, not for commercial purposes.&#10;&#10;This app is a part of Project Enlight.&#10;Github: huming2207/Enlighter&#10;"
+                   wrapText="true"/>
         </AnchorPane>
     </Tab>
 </TabPane>
